# DataHidingH264

./: .gitignore  .gitlab-ci.yml  CHANGES.TXT  CMakeLists.txt  Changes_detail.txt  Makefile  README.md  Readme.txt  jm_vc7.sln  jm_vc8.sln  jm_vc9.sln  ldecod.dsp  ldecod.vcproj  ldecod_vc10.vcxproj  ldecod_vc10.vcxproj.filters  ldecod_vc7.vcproj  ldecod_vc8.vcproj  ldecod_vc9.vcproj  lencod.dsp  lencod.vcproj  lencod_vc10.vcxproj  lencod_vc10.vcxproj.filters  lencod_vc7.vcproj  lencod_vc8.vcproj  lencod_vc9.vcproj  tml.dsw  tml.sln  unixprep.sh
JM.xcodeproj/: project.pbxproj
doc/: Encoding Types and the Variables.doc  JVT-AD010.doc  JVT-W041_ncm.doc  doxygen.txt  jm16.2_changes.doc  ldecod.dox  lencod.dox
lcommon/inc/: config_common.h  ctx_tables.h  distortion.h  enc_statistics.h  frame.h  ifunctions.h  img_process.h  input.h  io_image.h  io_raw.h  io_tiff.h  mb_access.h  memalloc.h  mv_prediction.h  nalucommon.h  params.h  parsetcommon.h  report.h  typedefs.h  types.h  win32.h
lcommon/src/: config_common.c  img_process.c  input.c  io_raw.c  io_tiff.c  mb_access.c  mbuffer_common.c  memalloc.c  mv_prediction.c  nalucommon.c  parsetcommon.c  transform.c
ldecod/: Makefile
ldecod/inc/: abt.h  annexb.h  b_frame.h  biaridecod.h  bitsbuf.h  block.h  cabac.h  context_ini.h  contributors.h  ctx_tables.h  decodeiff.h  defines.h  elements.h  erc_api.h  erc_do.h  erc_globals.h  errorconcealment.h  fmo.h  global.h  golomb_dec.h  header.h  ifunctions.h  image.h  intra16x16_pred.h  intra4x4_pred.h  intra8x8_pred.h  leaky_bucket.h  loopfilter.h  macroblock.h  mb_access.h  mb_prediction.h  mbuffer.h  mbuffer_mvc.h  mc_prediction.h  memalloc.h  nalu.h  nalucommon.h  output.h  parset.h  parsetcommon.h  (+8 more)
ldecod/src/: abt.c  abt_const.c  annexb.c  b_frame.c  biaridecod.c  bitsbuf.c  block.c  cabac.c  context_ini.c  decodeiff.c  decoder_test.c  erc_api.c  erc_do_i.c  erc_do_p.c  errorconcealment.c  filehandle.c  fmo.c  golomb_dec.c  header.c  image.c  intra16x16_pred.c  intra16x16_pred_mbaff.c  intra4x4_pred.c  intra4x4_pred_mbaff.c  intra8x8_pred.c  intra8x8_pred_mbaff.c  intra_chroma_pred.c  intra_chroma_pred_mbaff.c  ldecod.c  leaky_bucket.c  loopFilter.c  loop_filter_mbaff.c  loop_filter_normal.c  macroblock.c  mb_access.c  mb_prediction.c  mb_read.c  mbuffer.c  mbuffer_mvc.c  mc_direct.c  (+18 more)
lencod/: Makefile
lencod/inc/: abt.h  annexb.h  b_frame.h  biariencode.h  block.h  cabac.h  cconv_yuv2rgb.h  configfile.h  conformance.h  context_ini.h  contributors.h  ctx_tables.h  defines.h  elements.h  enc_statistics.h  encodeiff.h  epzs.h  errdo.h  errdo_mc_prediction.h  explicit_gop.h  explicit_seq.h  fast_me.h  filehandle.h  fmo.h  frame.h  get_block_otf.h  global.h  golomb.h  header.h  ifunctions.h  image.h  img_chroma.h  img_dist_ms_ssim.h  img_dist_snr.h  img_dist_ssim.h  img_distortion.h  img_io.h  img_luma.h  img_process.h  input.h  (+67 more)
lencod/src/: abt.c  abt_const.c  annexb.c  b_frame.c  biariencode.c  block.c  cabac.c  cconv_yuv2rgb.c  configfile.c  conformance.c  context_ini.c  decoder.c  encodeiff.c  epzs.c  errdo.c  errdo_dist_mhyp.c  errdo_mc_prediction.c  explicit_gop.c  explicit_seq.c  fast_me.c  filehandle.c  fmo.c  get_block_otf.c  golomb.c  header.c  image.c  image_mp.c  img_chroma.c  img_dist_ms_ssim.c  img_dist_snr.c  img_dist_ssim.c  img_distortion.c  img_io.c  img_luma.c  img_process.c  input.c  intra4x4.c  intra8x8.c  intra_chroma.c  intrarefresh.c  (+88 more)
lldb/: JM.py  lldbinit-JM.in
rtp_loss/: Makefile  rtp_loss_vc9.vcproj
rtpdump/: Makefile  StdAfx.cpp  StdAfx.h  rtpdump.cpp  rtpdump.dsp  rtpdump.vcproj  rtpdump_vc7.vcproj  rtpdump_vc8.vcproj  rtpdump_vc9.vcproj
source/app/ldecod/: CMakeLists.txt  Cabac_Func.c  Cabac_Func.h  Cavlc_Func.c  Cavlc_Func.h  Enc_Entropy.c  Enc_Entropy.h  Enc_Input_param.h  cabac.c  configfile.c  decoder_test.c  global.h  image.c  mb_read.c  nal.c  read_comp_cabac.c  read_comp_cavlc.c
source/app/lencod/: CMakeLists.txt  configfile.c  context_ini.c  fmo.c  intra_chroma.c  list_reorder.c  md_common.c  me_hme.c  me_umhex.c  mode_decision.c  q_matrix.c  q_offsets.c  ratectl.c  rdopt.c  rdoq.c  sei.c  slice.c  weighted_prediction.c  wp_mciter.c
source/app/rtpdump/: CMakeLists.txt
source/app/rtploss/: CMakeLists.txt
source/lib/lcommon/: CMakeLists.txt
